# using poetry pyproject format : https://python-poetry.org/docs/pyproject/
# poetry new .

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "ObeyonRFS"
version = "0.0.11"
description = "Robotic Framework System named ObeyonRFS"
license = "MIT"
authors = [
  "Yanothai Chaitawat <yanothaic15@gmail.com>",
]
maintainers = [
  "Yanothai Chaitawat <yanothaic15@gmail.com>",
]
readme = "README.md"
homepage = "https://github.com/pypa/sampleproject"
repository = "https://github.com/ObeyonRFS/ObeyonRFS"
documentation = "https://github.com/pypa/sampleproject"
keywords = ["packaging","poetry"]
classifiers = [
  #https://pypi.org/classifiers/
  "Programming Language :: Python :: 3",
  "Framework :: Robot Framework",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
packages = [
  { include = "obeyon_rfs" },
]
include = [
  "obeyon_rfs/**/*",
  "obeyon_rfs/**/*.py",
  "obeyon_rfs/**/LICENSE",
  "obeyon_rfs/**/.gitignore",
  "obeyon_rfs/**/*.txt",
  "obeyon_rfs/**/*.yaml",
]
exclude = ["__pycache__", ".pytest_cache", ".git"]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
orfs = "obeyon_rfs.cli_tools:main"