# using poetry pyproject format : https://python-poetry.org/docs/pyproject/
# poetry new .

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "PACKAGE_NAME"
version = VERSION
description = DESCRIPTION
license = "MIT"
authors = AUTHORS
maintainers = MAINTAINERS
readme = "README.md"
homepage = "https://github.com/pypa/sampleproject"
repository = "https://github.com/ObeyonRFS/ObeyonRFS"
documentation = "https://github.com/pypa/sampleproject"
keywords = ["packaging","poetry"]
classifiers = [
  #https://pypi.org/classifiers/
  "Programming Language :: Python :: 3",
  "Framework :: Robot Framework",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
packages = [
  { include = "src" },
]
include = [
  "src/**/*",
  "src/**/*.py",
  "src/**/LICENSE",
  "src/**/.gitignore",
  "src/**/*.txt",
  "src/**/*.yaml",
]
exclude = ["__pycache__", ".pytest_cache", ".git"]


[tool.poetry.dependencies]
DEPENDENCIES

[tool.poetry.scripts]
PACKAGE_COMMAND_NAME = "PACKAGE_NAME:main"
